Add installer .gitignore, some more tests and feature that temp files are deleted on exit